tests/negative/type_class_no_default_ctor.uzpp
// XATOLIK_KUTILMOQDA: cpp_level: standart konstruktor yo'q
ulash "uzpp_runtime.hpp"
sinf Mashina {
ochiq:
    Mashina(matn nom) {}
};
butun asosiy() {
    Mashina m;
    qaytarish 0;
}
